<resources>
    <string name="app_name">Boat Reservation System</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Zaloguj się </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Logowanie nieudane"</string>
    <string name="login_failed_err">"Błędna wartość"</string>
    <string name="version_err">"Błąd wersji kodu"</string>

    <string name="login">Log in</string>
    <string name="auth0_client_id">22N4G1NqxVi5F2RV1VLBaSEcUtPaZ77i</string>
    <string name="auth0_domain">dev-m2z94jmu.eu.auth0.com</string>
    <string name="api_url">http://10.0.2.2:8080/timesheets</string>
    <string name="account">Konto</string>
    <string name="yachts">Jachty</string>
    <string name="reservations">Rezerwacje</string>
    <string name="title_activity_admin">Panel Administracyjny</string>
    <string name="title_activity_cus_panel">Panel użytkownika</string>
    <string name="title_activity_acc">Dane</string>
    <string name="title_activity_prd">Jachty</string>
    <string name="title_activity_rsv">Rezerwacje</string>
    <string name="name">Nazwa</string>
    <string name="description">Opis</string>
    <string name="price">Cena</string>
    <string name="data_load">Załadowano dane</string>
    <string name="data_load_err">Błąd pobierania danych</string>
    <string name="data_loading">Pobieram dane...</string>
    <string name="name_cus">Imię</string>
    <string name="save_button">Zapisz</string>
    <string name="email_placeholder">reservation@op.pl</string>
    <string name="phone_placeholder">111-222-333</string>
    <string name="surname">Nazwisko</string>
    <string name="street">Ulica</string>
    <string name="postal_code">01-200</string>
    <string name="room_number">Numer mieszkania</string>
    <string name="city">Miasto</string>
    <string name="logout">Wyloguj</string>

</resources>